--- a/loans/src/main/resources/application.yml
+++ b/loans/src/main/resources/application.yml
@@ -17,7 +17,14 @@ spring:
   profiles:
     active: dev
   config:
-    import: "configserver:http://localhost:8079"
+    import: "optional:configserver:http://localhost:8079"
 
 server:
   port: 8082
+
+# Enable refresh config changes
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
