[Section 8] Add Feign client for services communication

--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -49,7 +49,7 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-		<!-- OpenFeign client for client-side loadbalancing-->
+		<!-- OpenFeign as a HTTP client -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
