--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -18,6 +18,11 @@ spring:
     active: dev
   config:
     import: "optional:configserver:http://localhost:8079"
+  sleuth:
+    sampler:
+      percentage: 1
+  zipkin:
+    base-url: http://localhost:9411
 
 eureka:
   client:
