--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -20,6 +20,11 @@ spring:
           uri: https://github.com/dactien020796/java-spring-docker-kubernetes-config-server.git
           clone-on-start: true
           default-label: main
+  sleuth:
+    sampler:
+      percentage: 1
+  zipkin:
+    base-url: http://localhost:9411
 
 server:
   port: 8079
