--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+  sleuth:
+    sampler:
+      percentage: 1
+  zipkin:
+    base-url: http://localhost:9411
 
 eureka:
   client:
