[Section 12] Monitoring Metrics & Health: Adding Micrometer, Prometheus and Grafana

--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -41,7 +41,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh
+        include: "*"
 
 resilience4j:
   circuitbreaker:
