--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
       percentage: 1
   zipkin:
     base-url: http://localhost:9411
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://localhost:7080/realms/master/protocol/openid-connect/certs
 
 eureka:
   client:
