--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: cards
+    name: card-service
   datasource:
     username: sa
     url: jdbc:h2:mem:testdb
@@ -13,25 +13,25 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-    show-sql: true
-  profiles:
-    active: dev
-  config:
-    import: "optional:configserver:http://localhost:8079"
+    show-sql: false
+#  profiles:
+#    active: dev
+#  config:
+#    import: "optional:configserver:http://localhost:8079"
   sleuth:
     sampler:
       percentage: 1
   zipkin:
     base-url: http://localhost:9411
 
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
-  instance:
-    preferIpAddress: true
+#eureka:
+#  client:
+#    registerWithEureka: true
+#    fetchRegistry: true
+#    serviceUrl:
+#      defaultZone: http://localhost:8070/eureka/
+#  instance:
+#    preferIpAddress: true
 
 server:
   port: 8081
@@ -41,4 +41,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh
+        include: "*"
