--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   application:
     name: gateway-server
-  config:
-    import: "optional:configserver:http://localhost:8079"
+#  config:
+#    import: "optional:configserver:http://localhost:8079"
   cloud:
     gateway:
       discovery:
@@ -20,14 +20,14 @@ spring:
         jwt:
           jwk-set-uri: http://localhost:7080/realms/master/protocol/openid-connect/certs
 
-eureka:
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
-    serviceUrl:
-      defaultZone: http://localhost:8070/eureka/
-  instance:
-    preferIpAddress: true
+#eureka:
+#  client:
+#    registerWithEureka: true
+#    fetchRegistry: true
+#    serviceUrl:
+#      defaultZone: http://localhost:8070/eureka/
+#  instance:
+#    preferIpAddress: true
 
 server:
   port: 8000
